addons/ingress-prometheus.yaml

#kubectl -n monitoring create secret tls mofangge.cc --key server.key --cert server.crt
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus.com
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: mofangge.cc
      hosts:
        - prometheus.mofangge.cc
        - grafana.mofangge.cc
  rules:
    - host: prometheus.mofangge.cc
      http:
        paths:
        - backend:
            serviceName: prometheus-k8s
            servicePort: 9090
    - host: grafana.mofangge.cc
      http:
        paths:
        - backend:
            serviceName: grafana
            servicePort: 3000
